app/assets/stylesheets/redesign/pages/_lookbook-v2.scss
/* [Lookbook v2]
-------------------------------------------------------*/
.lookbook-v2-page {

  .category-header .media-wrap {
    display: block;
  }

  h1.title {
    color: $c-neutral-black;
  }


  a {
    color: $c-neutral-black;
  }

  .main-hero-wrap {
    margin-bottom: 0;
  }

  .hero-wrap {

    .sub-heading {
      font-style: normal;
      line-height: 3rem;
    }

    ul.sub-heading {
      margin: 0;
      padding: 2rem 0;

      li {
        margin: 0;
        list-style: none;
      }

    }

  }

  .section-intro {

    p {
      font-size: 3.3rem;
      line-height: 130%;
    }

    .cta-product-caption a {
      border-bottom: 1px solid $c-neutral-black;
    }

    h2.title {
      margin-top: 45px;
      text-transform: none;
    }

  }

  .content-copy:not(.vertical-align) {

    h3 {
      margin-top: 70px;
      font-size: 4rem;
    }

  }

  .copy-wrap h3,
  h3.featured-products-title {
    font-size: 4rem;
    text-transform: none;
  }

  .featured-products-title {
    margin: 85px 0;
  }

  .cta-product-caption {
    font-size: 1.1rem;
  }

  .vertical-align-copy {
    @include column-vertical-align();
  }

  .products-grid {
    margin: 70px 0;
  }

  .product-heading .title {
    font-size: 1.4rem;
    font-style: italic;
    color: $c-neutral-black;
    margin-bottom: 0;
  }

  .product-info a {
    border-bottom: 1px solid $c-neutral-black;
  }

  &.portrait-template {

    p {
      font-size: 1.5rem;
    }

  }

  @media (min-width: $bootstrap-md-width) {

    h1 > span:first-child {
      font-size: 4.4rem;
    }

    .product-info {
      display: inline;

      &:first-of-type {
        padding-left: 5px;
      }

      &:not(:first-of-type)::before {
        content: " | ";
        padding: 0 5px;
      }

    }

    &.portrait-template {

      section.intro {
        margin-top: 0;

        .content-copy {
          margin-top: -25%;
        }

      }

      section {
        margin-top: 15px;
      }

      .content-img img {
        padding: 0 5%;
      }

      .content-copy {
        padding-top: 55px;
      }

      .products-set .category--item:nth-of-type(4) {
        display: none;
      }

      .local-navigation-vertical {
        top: $fixed-header-with-locale-warn;
        position: fixed;
      }

    }

  }

  @media (min-width: $bootstrap-md-width) and (max-width: $bootstrap-lg-width - 1px) {

    .container-fluid.no-padding.no-margin .vertical-align-copy .content-img {
      padding-right: 15px;
    }


  }

  @media (max-width: $bootstrap-md-width - 1px) {

    .copy-wrap {

      .sub-heading {
        border-top: 0;
      }

      h3 {
        margin-top: 40px;
        font-size: 3rem;
      }

    }

    .cta-wrapper,
    .content-copy {
      text-align: center;
    }

    .section-intro p {
      font-size: 2.3rem;
    }

    .product-heading-wrap,
    // We currently show 2 columns of products on mobile.
    // To make the grid look better let's hide the last product only if it's an odd item.
    .products-collections .category--item:last-child:nth-child(odd) {
      display: none;
    }

  }

}

